@@ -38,6 +38,7 @@ import org.elasticsearch.test.ESTestCase;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -56,38 +57,45 @@ public class GeoMatchProcessorTests extends ESTestCase {
     public void testBasics() {
         // point
         Point expectedPoint = new Point(-122.084110, 37.386637);
-        testBasicsForFieldValue(Map.of("lat", 37.386637, "lon", -122.084110), expectedPoint);
+        testBasicsForFieldValue(mapOf("lat", 37.386637, "lon", -122.084110), expectedPoint);
         testBasicsForFieldValue("37.386637, -122.084110", expectedPoint);
         testBasicsForFieldValue("POINT (-122.084110 37.386637)", expectedPoint);
-        testBasicsForFieldValue(List.of(-122.084110, 37.386637), expectedPoint);
-        testBasicsForFieldValue(Map.of("type", "Point", "coordinates", List.of(-122.084110, 37.386637)), expectedPoint);
+        testBasicsForFieldValue(Arrays.asList(-122.084110, 37.386637), expectedPoint);
+        testBasicsForFieldValue(mapOf("type", "Point", "coordinates", Arrays.asList(-122.084110, 37.386637)), expectedPoint);
         // line
         Line expectedLine = new Line(new double[] { 0, 1 }, new double[] { 0, 1 });
         testBasicsForFieldValue("LINESTRING(0 0, 1 1)", expectedLine);
-        testBasicsForFieldValue(Map.of("type", "LineString", "coordinates", List.of(List.of(0, 0), List.of(1, 1))), expectedLine);
+        testBasicsForFieldValue(
+            mapOf("type", "LineString", "coordinates", Arrays.asList(Arrays.asList(0, 0), Arrays.asList(1, 1))),
+            expectedLine
+        );
         // polygon
         Polygon expectedPolygon = new Polygon(new LinearRing(new double[] { 0, 1, 1, 0, 0 }, new double[] { 0, 0, 1, 1, 0 }));
         testBasicsForFieldValue("POLYGON((0 0, 1 0, 1 1, 0 1, 0 0))", expectedPolygon);
         testBasicsForFieldValue(
-            Map.of(
+            mapOf(
                 "type",
                 "Polygon",
                 "coordinates",
-                List.of(List.of(List.of(0, 0), List.of(1, 0), List.of(1, 1), List.of(0, 1), List.of(0, 0)))
+                Arrays.asList(
+                    Arrays.asList(Arrays.asList(0, 0), Arrays.asList(1, 0), Arrays.asList(1, 1), Arrays.asList(0, 1), Arrays.asList(0, 0))
+                )
             ),
             expectedPolygon
         );
         // geometry collection
         testBasicsForFieldValue(
-            List.of(
-                List.of(-122.084110, 37.386637),
+            Arrays.asList(
+                Arrays.asList(-122.084110, 37.386637),
                 "37.386637, -122.084110",
                 "POINT (-122.084110 37.386637)",
-                Map.of("type", "Point", "coordinates", List.of(-122.084110, 37.386637)),
-                Map.of("type", "LineString", "coordinates", List.of(List.of(0, 0), List.of(1, 1))),
+                mapOf("type", "Point", "coordinates", Arrays.asList(-122.084110, 37.386637)),
+                mapOf("type", "LineString", "coordinates", Arrays.asList(Arrays.asList(0, 0), Arrays.asList(1, 1))),
                 "POLYGON((0 0, 1 0, 1 1, 0 1, 0 0))"
             ),
-            new GeometryCollection<>(List.of(expectedPoint, expectedPoint, expectedPoint, expectedPoint, expectedLine, expectedPolygon))
+            new GeometryCollection<>(
+                Arrays.asList(expectedPoint, expectedPoint, expectedPoint, expectedPoint, expectedLine, expectedPolygon)
+            )
         );
         testBasicsForFieldValue("not a point", null);
     }
